--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <li>2010 - 2015</li> 
                     </ul>
                 <hr />
-
+                <h1 class="profile">Contacto</h1>
                 <ul class="contact-info">
                     <li><ion-icon name="logo-whatsapp"></ion-icon>(664) 311 4285</li>
                     <li><ion-icon name="call-outline"></ion-icon>(663) 103 2623</li>
