--- a/index2.html
+++ b/index2.html
@@ -129,6 +129,12 @@
                                 https://tadi.app 
                             </a> 
                         </li>
+                        <li class="no-style fs-10 lh-16"> 
+                            <b>Landing page: </b> 
+                            <a class="no-style black" href="https://enarm-web-dev.vercel.app/"> 
+                                https://enarm-web-dev.vercel.app/
+                            </a> 
+                        </li>
                     </ul>
                 </div> 
                 
